K1J-1647: Implement legacy code mapping for medical investigation types